<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="commit">提交</string>
    <string name="app_name">智慧旅游</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">startActivity</string>
    <string name="title_activity_base_activty">BaseActivty</string>
    <string name="bxbxbai">bxbxbai</string>
    <string name="travel_app_text">© 宁夏中云科技股份有限公司</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_reg_activity">手机号注册</string>
    <string name="error_title">错误</string>
    <string name="please_login_hint">请登录</string>
    <string name="wait_travel_text">待出游</string>
    <string name="wait_review_text">待点评</string>
    <string name="wait_pay_text">待付款</string>
    <string name="user_my_wallet_text">我的钱包</string>
    <string name="user_balance_text">余额:</string>
    <string name="red_package_text">红包:</string>
    <string name="integral_text">积分:</string>
    <string name="notice_title_text">公告栏信息</string>
    <string name="user_collection_text">我的收藏\u3000</string>
    <string name="user_review_text">我的点评\u3000</string>
    <string name="phone_send_number">秒后可重新发送</string>
    <string name="phone_get_number">重新获取验证码</string>
    <string name="class_title_text">分类</string>
    <string name="class_seach_scenic_text"><![CDATA[查看所有景点门票>]]></string>
    <string name="hot_attractions_text">热门景点</string>
    <string name="not_data_hint">暂无信息</string>
    <string name="order_title_text">订单</string>
    <string name="order_three_within_text">三个月内</string>
    <string name="order_three_ago_text">三个月前</string>
    <string name="phone_get_message">正在加载...</string>
    <string name="mail_get_miss">请输入邮箱号</string>
    <string name="mail_get_err">邮箱号格式不正确</string>
    <string name="phone_get_miss">请输入手机号</string>
    <string name="phone_get_err">手机号格式不正确</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goods_order_time">订购时间:</string>
    <string name="tickets_number_text">门票数量:</string>
    <string name="order_delete_text">删除</string>

    <!-- 首页 -->
    <string name="scenic_spot_text">景区门票</string>
    <string name="today_offer_text">今日特价</string>
    <string name="listen_zhongwen">听中卫</string>
    <string name="look_zhongwei_text">看中卫</string>
    <string name="swim_around_text">酒店预订</string>
    <string name="interested_in_text">猜你喜欢</string>
    <string name="the_w_tourism_text">智慧旅游</string>

    <!-- 登录界面 -->
    <string name="password_get_err">密码不能为空</string>
    <string name="please_user_name_text">用户名/手机号/邮箱</string>
    <string name="please_pass_word_text">请输入密码</string>
    <string name="login_text">登 录</string>
    <string name="forget_pass_word">忘记密码?</string>
    <string name="registered_new_user">注册新用户</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="login_loging">登录中...</string>
    <string name="loading">正在加载...</string>

    <!-- 找回密码界面 -->
    <string name="find_pwd_text">找回密码</string>
    <string name="phone_find_back_text">手机找回</string>
    <string name="email_find_back_text">邮箱找回</string>
    <string name="email_style_err">邮箱格式不正确</string>
    <string name="email_code_null">请输入邮箱号</string>
    <string name="please_in_phone_number_text">请输入手机号</string>

    <!-- 用户提示 -->
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">无法回复</string>
    <string name="error_create_topic">无法点评</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">无法收藏</string>
    <string name="error_fav_topic">无法连接服务器</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="get_info_mation_text">获取信息失败</string>
    <string name="title_activity_scenic__tickets_">Scenic_Tickets_Activity</string>
    <string name="reg_loaing">正在努力加载...</string>
    <string name="please_loading_hint">请稍后...</string>
    <string name="title_activity_scenic_map">ScenicMapActivity</string>
    <string name="fill_in_the_phone_number_text">1.填写手机号</string>
    <string name="seting_passwprd_text">2.设置密码</string>
    <string name="message_auth_text">3.短信验证</string>
    <string name="please_input_phone_number_text">请输入11位手机号</string>
    <string name="next_button_text">下一步</string>
    <string name="login_time_out">已与服务器断开连接,请重新登录</string>

    <!-- 听中卫 -->
    <string name="open_time_text">开放时间</string>
    <string name="distance_text">距离:</string>
    <string name="attractions_activity">景点列表</string>
    <string name="title_activity_attractions_details_">Attractions_details_Activity</string>
    <string name="not_music_file_text">暂无音频介绍</string>
    <string name="not_hava_arrt_info">暂无相关景点信息</string>
    <string name="switch_account_text">切换账号</string>
    <string name="title_activity_tickets__detail_">Tickets_Detail_Activity</string>
    <string name="spot_discount">沙坡头成人票（下单立减5元）</string>
    <string name="booking_expires">到期时间</string>

    <!-- 景区门票详情 -->
    <string name="tickets_info_text">景区简介</string>
    <string name="tickets_situation_text">景区实况</string>

    <string name="end_date_time_text">到期时间:</string>
    <string name="need_know_text">预定需知</string>

    <!--提交订单-->
    <string name="ticket_phone_null">手机号不能为空</string>
    <string name="ticket_phone_errer">手机号格式错误</string>
    <string name="ticket_card_null">身份证号不能为空</string>
    <string name="ticket_card_errer">身份证号格式错误</string>
    <string name="ticket_user_null">取票人不能为空</string>
    <string name="ticket_null">请输入购票数</string>


    <string name="title_activity_brand__address_">Brand_Address_Activity</string>
    <string name="not_address_info_text">暂无地址信息</string>
    <string name="brand_address_text">景区地址</string>





    <string name="weather_source_yahoo">Yahoo! Weather</string>
    <string name="widget_4_2">MagicModWeather</string>
    <string name="weather_category">Weather Settings</string>
    <string name="weather_use_24h">Use 24-hour Formate</string>
    <string name="weather_refresh_interval">Update interval</string>
    <string name="weather_use_metric">Use metric</string>

    <!-- Weather - Update frequency -->
    <string name="weather_refresh_manual">Manual</string>
    <string name="weather_refresh_30min">30 minutes</string>
    <string name="weather_refresh_60min">60 minutes</string>
    <string name="weather_refresh_2hrs">2 hours</string>
    <string name="weather_refresh_4hrs">4 hours</string>
    <string name="weather_refresh_6hrs">6 hours</string>
    <string name="weather_refresh_8hrs">8 hours</string>

    <!-- Weather - Wind directions -->
    <string name="weather_N">N</string>
    <string name="weather_NE">NE</string>
    <string name="weather_E">E</string>
    <string name="weather_SE">SE</string>
    <string name="weather_S">S</string>
    <string name="weather_SW">SW</string>
    <string name="weather_W">W</string>
    <string name="weather_NW">NW</string>

    <string name="press_again_exit">Press again to exit app</string>
    <string name="geo_location_fail_info">Can\'t find location, please choose city manual.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="weather_progress_title">Verifying location</string>
    <string name="weather_retrieve_location_dialog_title">Cannot retrieve location!</string>
    <string name="weather_select_location">Select location</string>
    <string name="weather_custom_location_dialog_title">Enter location</string>
    <string name="weather_sync_time">Synced at %s</string>
    <string name="weather_humidity">Humidity %s</string>

    <!-- Weather - Weather codes -->
    <string name="weather_0">Tornado</string>
    <string name="weather_1">Tropical Storm</string>
    <string name="weather_2">Hurricane</string>
    <string name="weather_3">Severe Thunderstorms</string>
    <string name="weather_4">Thunderstorms</string>
    <string name="weather_5">Mixed Rain and Snow</string>
    <string name="weather_6">Mixed Rain and Sleet</string>
    <string name="weather_7">Mixed Snow and Sleet</string>
    <string name="weather_8">Freezing Drizzle</string>
    <string name="weather_9">Drizzle</string>
    <string name="weather_10">Freezing Rain</string>
    <string name="weather_11">Showers</string>
    <string name="weather_12">Showers</string>
    <string name="weather_13">Snow Flurries</string>
    <string name="weather_14">Light Snow Showers</string>
    <string name="weather_15">Blowing Snow</string>
    <string name="weather_16">Snow</string>
    <string name="weather_17">Hail</string>
    <string name="weather_18">Sleet</string>
    <string name="weather_19">Dust</string>
    <string name="weather_20">Foggy</string>
    <string name="weather_21">Haze</string>
    <string name="weather_22">Smoky</string>
    <string name="weather_23">Blustery</string>
    <string name="weather_24">Windy</string>
    <string name="weather_25">Cold</string>
    <string name="weather_26">Cloudy</string>
    <string name="weather_27">Mostly Cloudy</string> <!-- Night -->
    <string name="weather_28">Mostly Cloudy</string> <!-- Day -->
    <string name="weather_29">Partly Cloudy</string> <!-- Night -->
    <string name="weather_30">Partly Cloudy</string> <!-- Day -->
    <string name="weather_31">Clear</string> <!-- Night -->
    <string name="weather_32">Sunny</string>
    <string name="weather_33">Fair</string> <!-- Night -->
    <string name="weather_34">Fair</string> <!-- Day -->
    <string name="weather_35">Mixed Rain and Hail</string>
    <string name="weather_36">Hot</string>
    <string name="weather_37">Isolated Thunderstorms</string>
    <string name="weather_38">Scattered Thunderstorms</string>
    <string name="weather_39">Scattered Thunderstorms</string>
    <string name="weather_40">Scattered Showers</string>
    <string name="weather_41">Heavy Snow</string>
    <string name="weather_42">Scattered Snow Showers</string>
    <string name="weather_43">Heavy Snow</string>
    <string name="weather_44">Partly Cloudy</string>
    <string name="weather_45">Thundershowers</string>
    <string name="weather_46">Snow Showers</string>
    <string name="weather_47">Isolated Thundershowers</string>
    <string name="weather_3200"></string> <!-- Forecast unavailable -->

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tursday">Tursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!--收货地址-->
    <string name="address">收货地址</string>

    <!--设置-->
    <string name="install_flow_title">省流量</string>
    <string name="install_flow_describute">2G/3G下不显示图片</string>
    <string name="cache_title">清除缓存</string>

    <string name="back">退出</string>

    <string name="ticket">票号</string>

    <string name="title_activity_play__video_">Play_Video_Activity</string>
</resources>
