<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_title"></include>
    <!--省流量-->
    <RelativeLayout
        android:id="@+id/install_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/write"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/install_flow_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="14dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="14dp"
            android:text="@string/install_flow_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/install_flow_describute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="14dp"
            android:text="@string/install_flow_describute"
            android:layout_toRightOf="@+id/install_flow_title" />

        <com.cdhxqh.travel_ticket_app.app.SwitchButton
            android:id="@+id/wiperSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/catchs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/write"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/catch_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="14dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="14dp"
            android:text="@string/cache_title"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/catch_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_list_view" />

    </RelativeLayout>

    <Button
        android:id="@+id/back_id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_lightblue"
        android:text="@string/back"
        android:textColor="@color/write"
        android:textSize="20sp" />

</LinearLayout>
