<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1fbf9"
    android:orientation="vertical"
    >


    <ImageView
        android:id="@+id/top_image_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:background="@drawable/login_bg"
        android:src="@drawable/login_font" />

    <LinearLayout
        android:id="@+id/linearlayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimens_20"
        android:background="@drawable/edit_text_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_edittext_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_60"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_10"
            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/login_icon_user"
            android:hint="@string/please_user_name_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_line"></View>

        <EditText
            android:id="@+id/passworld_edittext_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_60"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_10"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/login_icon_lock"
            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/please_pass_word_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginRight="@dimen/dimens_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewPassWord"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="@string/forget_pass_word"
            android:textColor="@color/list_item_read"
            android:textSize="15sp" />

        <Button
            android:id="@+id/login_btn_id"
            style="@style/btnOrange"
            android:text="@string/login_text" />


            <com.cdhxqh.travel_ticket_app.app.SwitchButton
                android:id="@+id/wiperSwitch1"
                android:layout_gravity="center"
                android:layout_width="10dp"
                android:layout_height="10dp"
                />

        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_footbg_f"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linearLayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="@dimen/dimens_20"
            android:background="@drawable/login_button1_a"
            android:gravity="center">

            <TextView
                android:id="@+id/button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/registered_new_user"
                android:textColor="@color/write" />

            <ImageView
                android:id="@+id/image_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/button_id"
                android:src="@drawable/login_icon_add" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

