<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_layout_bj"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:layout_below="@+id/user_re_layout_id"
    android:layout_marginLeft="@dimen/dimens_10"
    android:layout_marginRight="@dimen/dimens_10"
    android:layout_marginTop="@dimen/dimens_10"
    android:background="@drawable/edit_text_bg"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_menu_wallet2"
            android:gravity="center_vertical"
            android:text="@string/user_my_wallet_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/list_line_x"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_balance_text" />

            <TextView
                android:id="@+id/user_balance_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_10"
                android:text="¥ 0.00 元"
                android:textColor="@color/orange_color" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_package_text" />

            <TextView
                android:id="@+id/user_red_pack_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_10"
                android:text="0个，¥0.00元"
                android:textColor="@color/orange_color" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integral_text" />

            <TextView
                android:id="@+id/user_integral_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_10"
                android:text="0可兑换"
                android:textColor="@color/orange_color" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="wrap_content"
        android:background="@drawable/list_line_x"></View>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_notice" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_title_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0条"
                    android:textColor="@color/green_color" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@drawable/list_line_x"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_collection" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_collection_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0条"
                    android:textColor="@color/green_color" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@drawable/list_line_x"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_comment2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_review_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0条"
                    android:textColor="@color/green_color" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
