<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp">


    <TableRow android:layout_weight="1">

        <LinearLayout
            android:id="@+id/tourism_spot_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow_color"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_w_tourism_text"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_22"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/todaySpecial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@color/red_color"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_sales" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_offer_text"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_22"
                android:textStyle="bold" />


        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_marginTop="2dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/scenic_spot_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green_color_1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_ticket" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scenic_spot_text"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_22"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@color/sky_blue_color"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_nearby" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swim_around_text"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_22"
                android:textStyle="bold" />


        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_marginTop="2dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/listen_zhongwei_layout_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/dark_blue_color"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_listen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listen_zhongwen"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_22"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@color/purple_color"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_look" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_zhongwei_text"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_22"
                android:textStyle="bold" />


        </LinearLayout>
    </TableRow>


</TableLayout>
